# bevy-luau

./: .gitignore  AGENTS.md  AI_POLICY.md  Cargo.toml  TODO.md  test.luau
assets/scripts/: main.luau
src/: api.rs  bridge.rs  commands.rs  dynamic_ecs.rs  lib.rs  loading.rs  luau_ir.rs  main.rs  pool.rs  query.rs  runtime.rs  schema.rs  systems.rs  types.rs
