[package]
name = "bevy-luau"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0-rc.2", features = [
    "async_executor",
    "bevy_log",
    "bevy_state",
    "multi_threaded",
    "reflect_auto_register",
], default-features = false }
mluau = { git = "https://github.com/mluau/mluau", features = [
    "luau",
    "vendored",
] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
lto = "fat"
panic = "abort"
codegen-units = 1
