[package]
name = "bevy-luau"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0-rc.2", features = [
    "async_executor",
    "bevy_log",
    "bevy_state",
    "multi_threaded",
    "reflect_auto_register",
], default-features = false }
lasso = { version = "0.7.3", features = ["ahasher", "inline-more"] }
mluau = { git = "https://github.com/mluau/mluau", features = ["luau-vector4"] }
smallvec = "1.15.1"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
lto = "fat"
panic = "abort"
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes_without_reason = "forbid"

type_complexity = "allow"
too_many_arguments = "allow"
needless_pass_by_value = "allow"
